cluster/apps/services/campaign-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conexao-solidaria-campaign-api-svc-stable
  namespace: conexao-solidaria
  labels:
    app: conexao-solidaria-campaign-api
spec:
  selector:
    app: conexao-solidaria-campaign-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: conexao-solidaria-campaign-api-svc-preview
  namespace: conexao-solidaria
  labels:
    app: conexao-solidaria-campaign-api
spec:
  selector:
    app: conexao-solidaria-campaign-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
