cluster/apps/services/campaign-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conexao-solidaria-campaign-api-ingress
  namespace: conexao-solidaria
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: campaign-api.conexao-solidaria.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conexao-solidaria-campaign-api-svc-stable
                port:
                  number: 8080
